--- a/data/en/homepage.yml
+++ b/data/en/homepage.yml
@@ -6,126 +6,29 @@ hero:
   btn:
     label:  Collections
     url: "#form-main"
-    
+  text_1: $399
+  text_2: "\"The Morning Glory\"<br>Ceiling Lamp"
+  text_3: "Enhance your home or office with effective and stylish <b>lightning</b> by Prizma Studio."
+  text_4:  Send a request now!
+  text_5: "We have more than **10 years** of experience of improving our clients’ projects with lighting solutions."
+  btn_link: Read more
 
-section_brands:
-  title: Trusted by 
-  items:
-    - img: './images/brands/b1.png'
-    - img: './images/brands/b2.png'
-    - img: './images/brands/b3.png'
-    - img: './images/brands/b6.png'
-    - img: './images/brands/b5.png'
-    - img: './images/brands/b4.png'
 
-section_features:
-  title: Features
-  subtitle: Most calendars are designed for teams. Slate is designed for freelancers
-  items:
-    - title: OpenType features Variable fonts
-      icon: 'i1'
-      desc: Slate helps you see how many more days you need to work to reach your financial goal.
-    - title: Design with real data
-      icon: 'i2'
-      desc: Slate helps you see how many more days you need to work to reach your financial goal.
-    - title: Fastest way to take action
-      icon: 'i3'
-      desc: Slate helps you see how many more days you need to work to reach your financial goal.
-   
-section_1:
-  title: Fastest way to organize
-  desc: Most calendars are designed for teams. Slate is designed for freelancers
-  btn:
-    label: Try For Free
-  img: './images/img1.png'
- 
-section_2:
-  suptitle: At your fingertips
-  title: Lightning fast prototyping 
-  subtitle: "Subscribe to our Newsletter <br>Available exclusivery on Figmaland"
-  img: './images/img2.svg'
+section_about:
+  suptitle: "\\ about us \\"
+  title: Illuminate Your Space, Illuminate Your Life With Us
+  subtitle: Get a lightning solution that suits your needs.
+  heading: Place the Right Accents with Modern Lights by Prizma Studio
+  desc: | 
+    We closely cooperate with our clients to fully understand their needs and goals during the early stages of the project. We provide accurate lighting analysis, detailed specifications, schedules for A/V integration, detailed fixture design, and more.
 
-section_brands:
-  title: Partners
-  desc: Most calendars are designed for teams. Slate is designed for freelancers
-  btn:
-    label: Try For Free
-  imgs:
-    - title: Client Name
-      img: './images/brands/b1.png'
-    - title: Client Name
-      img: './images/brands/b2.png'
-    - title: Client Name
-      img: './images/brands/b3.png'
-    - title: Client Name
-      img: './images/brands/b4.png'
-    - title: Client Name
-      img: './images/brands/b5.png'
-    - title: Client Name
-      img: './images/brands/b1.png'
-    - title: Client Name
-      img: './images/brands/b2.png'
-    - title: Client Name
-      img: './images/brands/b3.png'
-
-section_comments:
-  title: Testimonials
-  btn:
-    label: More Testimonials
-  items:
-    - name: Organize across
-      job: Ui designer
-      desc: Most calendars are designed for teams. Slate is designed for freelancers who want a simple way to plan their schedule.
-      ava: './images/comments/ava1.png'
-      img: './images/comments/logo1.png'
-    - name: Organize across
-      job: Ui designer
-      desc: Most calendars are designed for teams. Slate is designed for freelancers who want a simple way to plan their schedule.
-      ava: './images/comments/ava1.png'
-      img: './images/comments/logo1.png'
-    - name: Organize across
-      job: Ui designer
-      desc: Most calendars are designed for teams. Slate is designed for freelancers who want a simple way to plan their schedule.
-      ava: './images/comments/ava1.png'
-      img: './images/comments/logo1.png'
-
-section_plans:
-  title: Pricing
-  desc: Most calendars are designed for teams. Slate is designed for freelancers
-  items:
-    - type: FREE
-      desc: Organize across all apps by hand
-      cost: 0
-      btn:
-        label: Order Now
-      lists:
-        - item: Pricing Feature
-        - item: Pricing Feature
-        - item: Pricing Feature
-        - item: Pricing Feature
-        - item: Pricing Feature
-    - type: STANDARD
-      vip: true
-      desc: Organize across all apps by hand
-      cost: 10
-      btn:
-        label: Order Now
-      lists:
-        - item: Pricing Feature
-        - item: Pricing Feature
-        - item: Pricing Feature
-        - item: Pricing Feature
-        - item: Pricing Feature
-        - item: Pricing Feature
-        - item: Pricing Feature
-    - type: FREE
-      desc: Organize across all apps by hand
-      cost: 99
-      btn:
-        label: Order Now
-      lists:
-        - item: Pricing Feature
-        - item: Pricing Feature
-        - item: Pricing Feature
-        - item: Pricing Feature
-        - item: Pricing Feature
+    Our true passion is the art of integrating light within architecture. We have completed over 2000 residential projects and built complex lighting system designs nearly in every interior and exterior imaginable.
+  stat:
+    - val: "15K **+**"
+      title: "Lamps installed in 2023"
+    - val: "298"
+      title: "Custom solutions"
+    - val: "2K **+**"
+      title: "Clients in the USA"
+    - val: "599"
+      title: "Large-scale projects"
