--- a/data/en/homepage.yml
+++ b/data/en/homepage.yml
@@ -49,5 +49,17 @@ section_features:
   btn:
     label: More About Us
 
-
-
+section_features_gallery:
+  gallery:
+    - title: Commercial Projects
+      desc: We excel in creating captivating lighting designs that enhance the ambiance and elevate the customer experience.
+      img: './images/img3.webp'
+    - title: Healthcare Projects
+      desc: We focus on providing soothing and functional lighting solutions to promote healing and well-being in hospitals.
+      img: './images/img4.webp'
+    - title: Corporate Offices
+      desc: Our designs strike the perfect balance between functionality and aesthetics to create inspiring workspaces.
+      img: './images/img5.webp'
+    - title: Residential Spaces
+      desc: We specialize in crafting personalized lighting schemes that reflect the lifestyle and preferences of homeowners.
+      img: './images/img6.webp'
