--- a/data/en/homepage.yml
+++ b/data/en/homepage.yml
@@ -182,3 +182,20 @@ section_collections:
     - title: Forged Metal
       img: './images/p3.webp'
       desc: For timeless elegance and enduring strength, we turn to forged metal in crafting our lighting masterpieces. Each piece is meticulously handcrafted by skilled artisans.
+
+section_news:
+  suptitle: "\\ News & Articles \\"
+  title: News & Articles
+  subtitle: Read more about design and lightning techniques.
+  img: './images/img16.webp'
+  news:
+    - date: 12 April, 2024
+      cat: Technology
+      title: Cutting-Edge LED Technology
+      desc: Innovative advancements in LED technology are revolutionizing the lighting industry, offering unparalleled energy savings and longevity.
+    - date: 12 may 2024
+      cat: Tips
+      title: Benefits of Natural Lighting in Workspaces
+      desc: In this article, we delve into how harnessing the power of sunlight can enhance productivity, well-being, and overall satisfaction in the workplace.
+
+
