add section subscribe

--- a/data/en/homepage.yml
+++ b/data/en/homepage.yml
@@ -199,3 +199,7 @@ section_news:
       desc: In this article, we delve into how harnessing the power of sunlight can enhance productivity, well-being, and overall satisfaction in the workplace.
 
 
+section_subscribe:
+  title: Subscribe Now
+  subtitle: Get our latest news, special offers, and design ideas.
+
