--- a/config.toml
+++ b/config.toml
@@ -6,6 +6,7 @@ paginate = "6"
 relativeURLs = true
 summaryLength = "50"
 title = "Prizma"
+
 # [Languages.en]
 # contentDir = "content/en"
 # home = "Home"
@@ -26,10 +27,9 @@ languageCode = "en"
 languageName = "ENG"
 weight = 1
 
-
-
 [outputs]
 home = ["HTML", "RSS", "JSON"]
+
 [sitemap]
 ChangeFreq = "daily"
 Priority = 0.6
@@ -39,27 +39,20 @@ enableRobotsTXT = true
 [params]
 CIO_site_id = "XXX"
 GTM = "GTM-WHBQ3BV"
-develop = "Anastasiia_Berest"
 author = "Prizma"
-
+develop = "Anastasiia_Berest"
 logo = "./images/logo.svg"
 logo_dark = "./images/logo.svg"
 logo_description = "Prizma"
-
 site_name = "Prizma"
 site_url = "#"
-
 description = "Is a simple ecnosystem of interconnected crypto products designed for the mass adoption of cryptocurrencies."
-
 # search
 search = true
 
 # soc
-
 [[params.plugins.js]]
 link = "plugins/js/jquery.min.js"
-
-
 
 [params.preloader]
 enable = true
@@ -69,63 +62,142 @@ preloader = ""
 category = "categories"
 tag = "tags"
 
-
 ############################# socials #################################
 [[params.soc]]
 icon = "fb"
 link = "#"
+
 [[params.soc]]
 icon = "im"
 link = "#"
+
 [[params.soc]]
 icon = "tm"
 link = "#"
+
 [[params.soc]]
 icon = "ytb"
 link = "#"
+
 [[params.soc]]
 icon = "email"
 link = "#"
 
+############################# contacts #################################
+[[params.contacts]]
+icon = "map"
+link = "#"
+title = "2 Broklyn St, NY <br>711-2880 Nulla St, NY935-9940 Tortor. Street, NY<br>666-4366 Lacinia Avenue, NY"
+
+[[params.contacts]]
+icon = "msg"
+link = "mailto:prizma-studio@email.com"
+title = "prizma-studio@email.com"
+
+[[params.contacts]]
+icon = "tel"
+link = "tel:+12345678900"
+title = "+1 (234) 567 89 00"
+
+
+
 ############################# footer #################################
 [params.footer]
-    copyright = "Prizma invest &copy; 2024"
-
+copyright = "Created by Anastasiia Berest"
+note = "We provide lightning solutions for homes and businesses. Prizma Studio develops lightning projects and creates unique light fixtures."
 
 [[menu.footer]]
+hasChildren = true
+name = "Navigation"
 weight = 1
-name = "Terms of Service"
-URL = "/terms"
+
 [[menu.footer]]
-weight = 2
-name = "Privacy Policy"
-URL = "/policy"
-[[menu.footer]]
-weight = 3
-name = "Manage Cookies"
-URL = "/cookie"
-
-
-
-
-[[menu.header]]
+URL = "/"
+name = "About Us"
+parent = "Navigation"
 weight = 1
-name = "About us"
+
+[[menu.footer]]
 URL = "/"
-[[menu.header]]
+name = "Services"
+parent = "Navigation"
 weight = 2
-name = "Design"
+
+[[menu.footer]]
 URL = "/"
-[[menu.header]]
-weight = 3
 name = "Projects"
-URL = "/"
-[[menu.header]]
-weight = 4
-name = "Collections"
-URL = "/"
-[[menu.header]]
-weight = 5
-name = "Contacts"
-URL = "/"
+parent = "Navigation"
+weight = 3
 
+[[menu.footer]]
+URL = "/"
+name = "Collections"
+parent = "Navigation"
+weight = 4
+
+[[menu.footer]]
+URL = "/"
+name = "Contacts"
+parent = "Navigation"
+weight = 4
+
+[[menu.footer]]
+hasChildren = true
+identifier = "collections"
+name = "Collections"
+weight = 2
+
+[[menu.footer]]
+URL = "/"
+name = "Wooden Life"
+parent = "collections"
+weight = 1
+
+[[menu.footer]]
+URL = "/"
+name = "Outdoor Lightning"
+parent = "collections"
+weight = 2
+
+[[menu.footer]]
+URL = "/"
+name = "Ceiling Fixtures"
+parent = "collections"
+weight = 3
+
+[[menu.footer]]
+URL = "/"
+name = "Bedside Lamps"
+parent = "collections"
+weight = 4
+
+[[menu.footer]]
+URL = "/"
+name = "LED Lightning"
+parent = "collections"
+weight = 5
+
+[[menu.header]]
+URL = "/"
+name = "About us"
+weight = 1
+
+[[menu.header]]
+URL = "/"
+name = "Design"
+weight = 2
+
+[[menu.header]]
+URL = "/"
+name = "Projects"
+weight = 3
+
+[[menu.header]]
+URL = "/"
+name = "Collections"
+weight = 4
+
+[[menu.header]]
+URL = "/"
+name = "Contacts"
+weight = 5
